generated/checkers/gen/AllGen-Double-Free-e61dd678601eac53d501dda1eb1bcffec7b11bd6/build_logs/syntax-repair-02/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static const clang::ento::MemRegion* {anonymous}::SAGenTestChecker::canonicalizeRegion(const clang::ento::MemRegion*, clang::ento::ProgramStateRef)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:128:52: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type’ {aka ‘const clang::ento::MemRegion* const*’} to ‘const clang::ento::MemRegion*’ in initialization
  128 |     const MemRegion *Next = State->get<PtrAliasMap>(Cur);
      |                             ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
      |                                                    |
      |                                                    clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type {aka const clang::ento::MemRegion* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::addFreedFieldToState(const clang::ento::MemRegion*, const clang::FieldDecl*, const clang::Stmt*, clang::ento::CheckerContext&, llvm::StringRef) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:143:74: error: expected primary-expression before ‘>’ token
  143 |   FieldSetTy::Factory &F = State->getStateManager().getContext<FieldSetTy>();
      |                                                                          ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:143:76: error: expected primary-expression before ‘)’ token
  143 |   FieldSetTy::Factory &F = State->getStateManager().getContext<FieldSetTy>();
      |                                                                            ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:96:18: warning: ‘static const clang::FieldDecl* {anonymous}::SAGenTestChecker::getFreedFieldFromArg(const clang::Expr*)’ defined but not used [-Wunused-function]
   96 | const FieldDecl* SAGenTestChecker::getFreedFieldFromArg(const Expr *E) {
      |                  ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
